RESOLVED FIXED124152
Fix undefined reference issues in JavaScriptCore build.
https://bugs.webkit.org/show_bug.cgi?id=124152
Summary Fix undefined reference issues in JavaScriptCore build.
Balazs Kilvady
Reported 2013-11-11 09:21:42 PST
These errors come up when building GTK port of jsc with gcc 4.7.2. Linking CXX executable ../../../bin/jsc ../../../lib/libjavascriptcoregtk.a(SymbolTable.cpp.o): In function `JSC::SharedSymbolTable::destroy(JSC::JSCell*)': SymbolTable.cpp:(.text._ZN3JSC17SharedSymbolTable7destroyEPNS_6JSCellE+0x44): undefined reference to `JSC::JSCell::inherits(JSC::ClassInfo const*) const' ../../../lib/libjavascriptcoregtk.a(SymbolTable.cpp.o): In function `JSC::SharedSymbolTable::destroy(JSC::JSCell*)': SymbolTable.cpp:(.text._ZN3JSC17SharedSymbolTable7destroyEPNS_6JSCellE+0x44): undefined reference to `JSC::JSCell::classInfo() const'
Attachments
proposed patch. (1.08 KB, patch)
2013-11-11 09:30 PST, Balazs Kilvady
oliver: review+
gtk-ews: commit-queue-
fixed patch. (1.17 KB, patch)
2013-11-12 01:06 PST, Balazs Kilvady
no flags
Balazs Kilvady
Comment 1 2013-11-11 09:30:23 PST
Created attachment 216580 [details] proposed patch.
kov's GTK+ EWS bot
Comment 2 2013-11-11 09:47:44 PST
Zan Dobersek
Comment 3 2013-11-11 14:55:15 PST
Comment on attachment 216580 [details] proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=216580&action=review > Source/JavaScriptCore/runtime/SymbolTable.cpp:33 > +#include "JSCellInlines.h" > +#include "JSDestructibleObject.h" Additionally include the SlotVisitorInlines.h header to get rid of the new undefined reference that was exposed by the GTK EWS. I think after that the patch will be good to go into the tree.
Balazs Kilvady
Comment 4 2013-11-12 01:06:17 PST
Created attachment 216649 [details] fixed patch. SlotVisitorInlines.h added, thanks to Zan Dobersek. Rebased on 159100.
WebKit Commit Bot
Comment 5 2013-11-12 09:36:00 PST
Comment on attachment 216649 [details] fixed patch. Clearing flags on attachment: 216649 Committed r159116: <http://trac.webkit.org/changeset/159116>
WebKit Commit Bot
Comment 6 2013-11-12 09:36:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.