Fix undefined reference issues in JavaScriptCore build. https://bugs.webkit.org/show_bug.cgi?id=124152

Patch by Balazs Kilvady <kilvadyb@homejinni.com> on 2013-11-12
Reviewed by Michael Saboff.

Missing includes added.

* runtime/SymbolTable.cpp:

Canonical link: https://commits.webkit.org/142402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159116 268f45cc-cd09-0410-ab3c-d52691b4dbfc